@@ -1,17 +1,0 @@
-.CodeMirror-wrapping {
-	width: auto !important;
-	margin: 1em 0 1.5em 0;
-	background: #fff;
-	border: 1px solid #bbb;
-	height: 500px !important;
-}
-      
-.CodeMirror-line-numbers {
-	width: 2.2em;
-	color: #aaa;
-	background-color: #eee;
-	text-align: right;
-	padding-right: .3em;
-	font-size: 10pt;
-	padding-top: .4em;
-}
