@@ -1,0 +1,3 @@
+.CodeMirror {
+	background: #fff;
+}
